--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </div>
                     <div class="col-start-1 col-end-12 md:col-start-8 md:col-end-13">
                         <div class="flex justify-center gap-4 ml-auto items-center">
-                            <a target="_blank" href="https://instagram.com/arena_cyberomsk"><img src="img/inst.svg" alt="instagram"></a>
+                            <a target="_blank" href="https://instagram.com/csa_avangard"><img src="img/inst.svg" alt="instagram"></a>
                             <a target="_blank" href="https://vk.com/csa_avangard"><img src="img/vk.svg" alt="vk"></a>
                             <a target="_blank" href="https://youtube.com/omskcyberarena"><img src="img/youtube.svg" alt="youtube"></a>
                             <a target="_blank" href="https://twitch.tv/arenacyberomsk1"><img src="img/twitch.svg" alt="twitch"></a>
