--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         </div>
                         <div class="col-start-1 col-end-12 lg:col-start-3 lg:col-end-11 text-right photos_text">
                             <h2 class="font-bold text-3xl uppercase my-4">Название опции вип-зала</h2>
-                            <p class="ml-auto font-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <p class="ml-auto font-light w-full sm:w-1/2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
             <div class="container mx-auto">
                 <div class="grid grid-cols-12 mt-16 md:mt-24 items-center">
                     <div class="col-start-1 col-end-12 md:col-start-1 md:col-end-7 mb-4 md:mb-0">
-                        <p class="text-center md:text-left">© 2022 Киберспорт Арена Авангард<br>Все права защищены</p>
+                        <p id="date" class="text-center md:text-left">© {{date}} Киберспорт Арена Авангард<br>Все права защищены</p>
                     </div>
                     <div class="col-start-1 col-end-12 md:col-start-8 md:col-end-13">
                         <div class="flex justify-center gap-4 ml-auto items-center">
