--- a/index.html
+++ b/index.html
@@ -231,24 +231,26 @@
                             </div>
                             <div class="justify-center block lg:hidden">
                                 <div class="w-11/12 mx-auto">
-                                    <img src="img/photo1.webp" width="772" height="381" alt="photo">
+                                    <button><</button>
+                                    <button>></button>
+                                    <img id="photo_first_mobile" src="" width="772" height="381" alt="photo">
                                 </div>
                             </div>
                             <div class="justify-center photos hidden lg:flex">
                                 <div>
-                                    <img src="img/photo2.webp" width="607" height="407" alt="photo">
+                                    <img id="photo_last" src="" width="607" height="407" alt="photo">
                                 </div>
                                 <div>
-                                    <img src="img/photo1.webp" width="772" height="381" alt="photo">
+                                    <img id="photo_first" src="" width="772" height="381" alt="photo">
                                 </div>
                                 <div>
-                                    <img src="img/photo3.webp" width="737" height="375" alt="photo">
+                                    <img id="photo_second" src="" width="737" height="375" alt="photo">
                                 </div>
                             </div>
                         </div>
                         <div class="col-start-1 col-end-12 lg:col-start-3 lg:col-end-11 text-right photos_text">
-                            <h2 class="font-bold text-3xl uppercase my-4">Название опции вип-зала</h2>
-                            <p class="ml-auto font-light w-full sm:w-1/2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <h2 id="photo_title" class="font-bold text-3xl uppercase my-4"></h2>
+                            <p id="photo_text" class="ml-auto font-light w-full sm:w-1/2"></p>
                         </div>
                     </div>
                 </div>
