--- a/index.html
+++ b/index.html
@@ -230,9 +230,13 @@
                                 <h1 class="uppercase font-black text-2xl absolute top-7 left-16">игровые зоны</h1>
                             </div>
                             <div class="justify-center block lg:hidden">
-                                <div class="w-11/12 mx-auto">
-                                    <button><</button>
-                                    <button>></button>
+                                <div class="w-10/12 mx-auto class relative">
+                                    <button id="prevPhoto" class="absolute -rotate-90 top-1/2 -translate-y-1/2 -left-12">
+                                        <img src="img/arrow.svg" alt="arrow">
+                                    </button>
+                                    <button id="nextPhoto" class="absolute -right-12 rotate-90 top-1/2 -translate-y-1/2">
+                                        <img src="img/arrow.svg" alt="arrow">
+                                    </button>
                                     <img id="photo_first_mobile" src="" width="772" height="381" alt="photo">
                                 </div>
                             </div>
