--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                     <a class="block h-fit my-4 mx-auto w-fit" href="#about">о клубе</a>
                                     <a class="block h-fit my-4 mx-auto w-fit" href="#zones">premium</a>
                                     <a class="block h-fit my-4 mx-auto w-fit" href="#go">как добраться</a>
-                                    <a class="block h-fit my-4 mx-auto w-fit" href="">контакты</a>
+                                    <a class="block h-fit my-4 mx-auto w-fit" href="#contacts">контакты</a>
                                 </div>
                             </div>
                             <div class="hidden sm:block lg:hidden mx-16">
@@ -277,7 +277,7 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <footer id="contacts">
             <div class="container mx-auto">
                 <div class="grid grid-cols-12 mt-16 md:mt-24 items-center">
                     <div class="col-start-1 col-end-12 md:col-start-1 md:col-end-7 mb-4 md:mb-0">
