--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <a class="block h-fit my-auto" href="#about">о клубе</a>
                                     <a class="block h-fit my-auto" href="#zones">premium</a>
                                     <a class="block h-fit my-auto" href="#go">как добраться</a>
-                                    <a class="block h-fit my-auto" href="">контакты</a>
+                                    <a class="block h-fit my-auto" href="#contacts">контакты</a>
                                 </div>
                             </div>
                             <div class="justify-between font-medium uppercase hidden lg:flex mx-16">
@@ -49,7 +49,7 @@
                                 <a class="block h-fit my-auto" href="#zones">premium</a>
                                 <img src="img/logo_nav.svg" width="400" height="75" alt="nav_logo">
                                 <a class="block h-fit my-auto" href="#go">как добраться</a>
-                                <a class="block h-fit my-auto" href="">контакты</a>
+                                <a class="block h-fit my-auto" href="#contacts">контакты</a>
                             </div>
                         </nav>
                     </div>
