--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <meta property="og:image" content="img/og_image.jpg">
         <meta property="og:image:width" content="800">
         <meta property="og:image:height" content="150">
+        <meta name="google-site-verification" content="LpHOvYezF5bgsDE7Bpd0nJnw2jhGjt-rDx_-5ebSm-Y" />
         <title>Арена "CYBEROMSK"</title>
         <link rel="stylesheet" href="css/index.css">
         <link rel="icon" type="image/png" href="img/favicon.png" sizes="196x196" />
