change text and images

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="about mx-auto">
                                 <h1 class="uppercase font-black text-2xl absolute bottom-6 left-24">о клубе</h1>
                             </div>
-                            <p class="font-light mt-8">Это уникальный, киберспортивный проект, с многолетним опытом управления<br>компьютерными клубами и организации киберспортивных мероприятий. Данное сообщество организовано для популяризации киберспортивной тематики на наших просторах. Арена Cyberomsk является лучшей специализированной киперспортивной площадкой, оснащенной самыми современными компьютерами, которые удовлетворят запросы самого искушенного посетителя.</p>
+                            <p class="font-light mt-8">Это уникальный, киберспортивный проект, с многолетним опытом управления компьютерными клубами и организации киберспортивных мероприятий. Данное сообщество организовано для популяризации киберспортивной тематики на наших просторах. Киберспорт арена Авангард  является лучшей специализированной площадкой, оснащенной самыми современными компьютерами, которые удовлетворят запросы самого искушенного посетителя.</p>
                         </div>
                     </div>
                 </div>
@@ -264,9 +264,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-start-1 col-end-12 lg:col-start-3 lg:col-end-11 text-right photos_text">
+                        <div class="col-start-1 col-end-12 text-right photos_text">
                             <h2 id="photo_title" class="font-bold text-3xl uppercase my-4"></h2>
-                            <p id="photo_text" class="ml-auto font-light w-full sm:w-1/2"></p>
+                            <p id="photo_text" class="ml-auto font-light w-full"></p>
                         </div>
                     </div>
                 </div>
