--- a/index.html
+++ b/index.html
@@ -249,18 +249,18 @@
                                     <button id="nextPhoto" class="absolute -right-12 rotate-90 top-1/2 -translate-y-1/2">
                                         <img src="img/arrow.svg" alt="arrow">
                                     </button>
-                                    <img id="photo_first_mobile" src="" width="772" height="381" alt="photo">
+                                    <img id="photo_first_mobile" src="" alt="photo">
                                 </div>
                             </div>
                             <div class="justify-center photos hidden lg:flex">
                                 <div>
-                                    <img id="photo_last" src="" width="607" height="407" alt="photo">
+                                    <img id="photo_last" src="" alt="photo">
                                 </div>
                                 <div>
-                                    <img id="photo_first" src="" width="772" height="381" alt="photo">
+                                    <img id="photo_first" src="" alt="photo">
                                 </div>
                                 <div>
-                                    <img id="photo_second" src="" width="737" height="375" alt="photo">
+                                    <img id="photo_second" src="" alt="photo">
                                 </div>
                             </div>
                         </div>
@@ -297,10 +297,10 @@
                     </div>
                     <div class="col-start-1 col-end-12 md:col-start-8 md:col-end-13">
                         <div class="flex justify-center gap-4 ml-auto items-center">
-                            <a target="_blank" href="https://instagram.com/csa_avangard"><img src="img/inst.svg" alt="instagram"></a>
-                            <a target="_blank" href="https://vk.com/csa_avangard"><img src="img/vk.svg" alt="vk"></a>
-                            <a target="_blank" href="https://youtube.com/omskcyberarena"><img src="img/youtube.svg" alt="youtube"></a>
-                            <a target="_blank" href="https://twitch.tv/arenacyberomsk1"><img src="img/twitch.svg" alt="twitch"></a>
+                            <a target="_blank" href="https://instagram.com/csa_avangard"><img src="img/inst.svg" width="32" height="32" alt="instagram"></a>
+                            <a target="_blank" href="https://vk.com/csa_avangard"><img src="img/vk.svg" width="39" height="22" alt="vk"></a>
+                            <a target="_blank" href="https://youtube.com/omskcyberarena"><img src="img/youtube.svg" width="28" height="19" alt="youtube"></a>
+                            <a target="_blank" href="https://twitch.tv/arenacyberomsk1"><img src="img/twitch.svg" width="28" height="32" alt="twitch"></a>
                         </div>
                     </div>
                 </div>
